--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "CovidObservationsDatabase": "Host=localhost;Database=postgres;Username=postgres;Password=racquel"
+  },
   "AllowedHosts": "*"
 }
